--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ What are you doing here?! you sneaky developer...
 -->
 
 <head>
+  <script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=515b79d3"></script>
   <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
   <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
   <!-- don't forget to remove this >>>>(google tag manager) script, if you are using this page/code -->
